<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="211dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="217dp"
            android:layout_height="218dp"
            android:orientation="vertical"
            tools:ignore="VisualLintBounds">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="#EDE59C"
                android:text="@string/task_name"
                android:textColor="#9C27B0"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="#F1ECC4"
                android:text="@string/task_deadline"
                android:textColor="#9C27B0"
                android:textColorHint="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:background="#EDE59C"
                android:text="@string/task_prio"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="#F1ECC4"
                android:text="@string/task_state"
                android:textColor="#9C27B0"
                android:textColorHint="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="VisualLintBounds" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="218dp"
            android:orientation="vertical"
            tools:ignore="VisualLintBounds">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="#ECD2F1"
                android:ems="10"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/editTextDate2"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints=""
                android:background="#E9BEF1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/jj_mm_yyyy"
                android:inputType="date"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="#ECD2F1"
                android:entries="@array/priorite"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#E9BEF1"
                android:entries="@array/etat"
                tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button2"
            android:layout_width="267dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="#E3ED7B"
            android:text="@string/bout_add_task"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:strokeColor="#969498"
            app:strokeWidth="5dp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/button4"
            android:layout_width="251dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:backgroundTint="#E3ED7B"
            android:text="@string/bout_view_task"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:strokeColor="#969498"
            app:strokeWidth="5dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#E3ED7B"
            android:text="@string/bout_delete_task"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:strokeColor="#969498"
            app:strokeWidth="5dp" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="349dp"
            android:layout_gravity="center"
            android:background="#CEF3F0"
            android:textColor="#009688"
            android:textSize="17sp"
            android:textStyle="bold"
            app:strokeColor="#969498"
            app:strokeWidth="5dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>